tests/sksl/errors/RedeclareUserType.glsl
### Compilation failed:

error: 2: expected an identifier, but found type 'S'
1 error
